修正jar包内的“.properties”文件读取不到的问题

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </dependency>
     
     <dependency>
-      <groupId>com.liuwei</groupId>
+      <groupId>com.smilingliuwei</groupId>
       <artifactId>configurator</artifactId>
       <version>1.0</version>
     </dependency>
